--- a/report/.gitignore
+++ b/report/.gitignore
@@ -11,10 +11,11 @@
 *.slg
 *.syg
 *.syi
-    
+
 # Carpeta de salida del compilador (opcional)
 output/
 build/
+svg-inkscape/
 
 # Archivos temporales del sistema
 .DS_Store
